community-modules/styles/src/internal/base/parts/_calculated-columns.scss
@mixin output {
    .ag-calculated-column-panel .ag-panel-content-wrapper {
        padding: var(--ag-grid-size) var(--ag-cell-horizontal-padding);
    }

    .ag-calculated-column-form {
        display: flex;
        flex-direction: column;
        gap: calc(var(--ag-grid-size) * 2);
        min-width: 260px;
        flex: 1 1 auto;
        min-height: 0;
    }

    .ag-calculated-column-expression-wrap {
        display: flex;
        flex-direction: column;
        flex: 1 1 auto;
        gap: var(--ag-grid-size);

        .ag-text-area {
            flex: 1 1 auto;
        }

        .ag-text-area-input-wrapper {
            height: 100%;
        }

        .ag-text-area-input {
            height: 100%;
            resize: none;
            padding-top: calc(var(--ag-grid-size) / 2);
        }
    }

    .ag-rtl .ag-calculated-column-expression-wrap .ag-text-area-input {
        padding-left: var(--ag-input-padding-start);
        direction: ltr;
    }

    .ag-calculated-column-expression-tools {
        display: flex;

        .ag-group-container {
            flex: 1 1 auto;
            justify-content: end;
            gap: var(--ag-grid-size);
            flex-wrap: nowrap;
            align-items: center;
        }
    }

    .ag-standard-button.ag-calculated-column-expression-tool {
        padding: calc(var(--ag-grid-size) / 2);
    }

    .ag-calculated-column-suggestion-path {
        display: flex;
        align-items: center;
        gap: calc(var(--ag-grid-size) / 2);
    }

    .ag-calculated-column-suggestion-parent {
        min-width: 0;
        overflow: hidden;
        text-overflow: ellipsis;
    }

    .ag-calculated-column-suggestion-parent,
    .ag-calculated-column-suggestion-separator {
        color: var(--ag-calculated-column-parent-suggestion-color);
    }

    .ag-calculated-column-suggestion-separator {
        flex: none;
    }

    .ag-calculated-column-suggestion-leaf {
        overflow: hidden;
        flex: none;
    }

    .ag-calculated-column-picker-list {
        width: var(--ag-calculated-column-suggestion-list-width);
    }

    .ag-calculated-column-actions {
        display: flex;
        justify-content: flex-end;
        gap: calc(var(--ag-grid-size) / 2);
    }

    .ag-calculated-column-action {
        min-width: 72px;
    }

    .ag-calculated-column-highlighted {
        background-color: var(--ag-calculated-column-highlight-color);
    }
}

